--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "fibers": "^4.0.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
+    "pdf-parse": "^1.1.1",
+    "pdfjs": "^2.3.2",
     "postcss-loader": "^3.0.0",
     "sass": "^1.23.0",
     "sass-loader": "^8.0.0",
